# WildfireCapstone

./: .env  .gitignore  LICENSE  README.md  READMEADD.md  READMEDIR.md  READMEP.md  READMEWCS.MD  READMEWFS.md  Test.ipynb  WCS_capabilities_extract.py  WFS_capabilities_extract.py  WMS_capabilities_extract.ipynb  pyproject.toml
Test/: Test.ipynb  public_fwi20230604.tif
wildfire_1/: .dockerignore  Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit
wildfire_1/app/: main.py
wildfire_1/app/api/: routes.py
wildfire_1/app/db/: session.py
wildfire_1/app/services/: additional_queries.py  wcs_queries.py  wfs_queries.py
wildfire_1/streamlit_app/: Home.py  api_client.py  session.py
wildfire_1/streamlit_app/pages/: Active_Fires.py  Additional_Layers.py  FIre_Danger.py  Fire_Danger.py  Fire_History.py  Fire_Perimeter.py  Forecast_Stations.py  M3_Hotspots.py  Reporting_Weather_Stations.py  Reporting_Weather_Stations_(Forecast).py  WCS_Layers.py
wildfire_1/wdfis_layer_extract/: additional_layers.ipynb  wcs_layer.ipynb  wfs_layer.ipynb
wildfire_1/wdfis_layer_extract/wfs_maps/: active_fires_2025-06-01.html  fire_history_2024_2025-06-01.html  fire_history_ytd_2025-06-01.html  forecast_weather_stations_current_2025-06-01.html  reporting_weather_stations_2025-06-01.html  reporting_weather_stations_forecast_2025-06-01.html
