[project]
name = "Wildfire_1"
version = "0.1.0"
description = "This is a frontend application designed to augment and additional features from WDFIS to an interactive map."
authors = [
    {name = "FrogOnARock",email = "mac2rock@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
pckages = [{include = "wildfire_1"}]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "geopandas (>=1.1.0,<2.0.0)",
    "folium (>=0.19.7,<0.20.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pandera (>=0.24.0,<0.25.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "geojson (>=3.2.0,<4.0.0)",
    "pydeck (>=0.9.1,<0.10.0)",
    "streamlit-keplergl (>=0.3.0,<0.4.0)",
    "keplergl (>=0.3.7,<0.4.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"